Refactor: Simplify JavaFX platform configuration
Co-authored-by: paroselo3550qc <paroselo3550qc@student.fatima.edu.ph>