@@ -9,30 +9,23 @@ A JavaFX-based restaurant ordering and inventory management system with:
 - Analytics with simple sales forecasting
 - SQLite persistence (file `data/pos.db`)
 
-## Prerequisites
+## Prerequisites (Windows only)
 - Java 25+
-- Maven 3.9+ (or use the `java` command shown below)
+- Maven 3.9+
 
 ## Run
-```bash
+```bat
 mvn -q -DskipTests package
 mvn -q javafx:run -Dexec.mainClass=com.restaurant.pos.MainApp
 ```
 
 If the JavaFX plugin has trouble on your platform, you can run:
-```bash
-# If Maven isn't installed, run directly with Java 25
-JFX_VER=25.0.1
-JFX_MP=~/.m2/repository/org/openjfx/javafx-controls/${JFX_VER}
-java \
-  --enable-preview \
-  --module-path "${JFX_MP}" \
-  --add-modules javafx.controls,javafx.fxml \
-  -cp "target/pos-1.0-SNAPSHOT.jar:$(jdeps -q --print-classpath target/pos-1.0-SNAPSHOT.jar 2>/dev/null || echo ~/.m2/repository/*)" \
-  com.restaurant.pos.MainApp
+```bat
+REM If you prefer running directly with Java (Windows)
+set JFX_VER=25.0.1
+set JFX_MP=%USERPROFILE%\.m2\repository\org\openjfx\javafx-controls\%JFX_VER%
+java --module-path "%JFX_MP%" --add-modules javafx.controls,javafx.fxml -cp "target\pos-1.0-SNAPSHOT.jar" com.restaurant.pos.MainApp
 ```
-
-Note: When running with plain `java`, ensure JavaFX platform-specific classifiers are present (e.g., `linux`, `win`, `mac`, `mac-aarch64`).
 
 ## Notes
 - Database file is created at first run with seed data.
